fixed overflow issues in blueBar

--- a/laab/src/App.css
+++ b/laab/src/App.css
@@ -1,5 +1,6 @@
 html, body {
-
+  margin: 0;
+  padding: 0;
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -9,6 +10,11 @@ html, body {
   overflow-x: hidden; 
   width: 100%;
 }
+
+* {
+  box-sizing: border-box;
+}
+
 
 .boldonse-regular {
   font-family: "Boldonse", system-ui;
